--- a/res/layout/activity_display_times.xml
+++ b/res/layout/activity_display_times.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".DisplayTimes" >
 
-     <ListView
-        android:id="@+id/marketplaceMealTime"
+    <ListView
+        android:id="@+id/timesList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
